<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appHead"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="578dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/head_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="254dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="мпппп"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="210dp"
        android:background="@color/colorRight"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/right_ch"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/wrong_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="218dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorWrong"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/wrong_ch"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/next_quest"
        android:layout_width="346dp"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="28dp"
        android:background="#FFA218"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/nextQ"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/restart_btn"
        android:layout_width="346dp"
        android:layout_height="104dp"
        android:layout_alignStart="@+id/right_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="305dp"
        android:background="#2365F7"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/restart_name"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible" />
</RelativeLayout>
